--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -133,6 +133,11 @@ android {
 }
 
 dependencies {
+    compile project(':react-native-device-info')
+    compile project(':react-native-spinkit')
+    compile project(':react-native-orientation')
+    compile project(':react-native-vector-icons')
+    compile project(':react-native-video')
     compile project(':react-native-splash-screen')
     compile fileTree(dir: "libs", include: ["*.jar"])
     compile "com.android.support:appcompat-v7:23.0.1"
