--- a/package.json
+++ b/package.json
@@ -7,13 +7,22 @@
 		"test": "jest"
 	},
 	"dependencies": {
+		"prop-types": "^15.5.10",
 		"react": "16.0.0-alpha.12",
 		"react-mixin": "^2.0.2",
 		"react-native": "0.47.2",
+		"react-native-device-info": "^0.11.0",
+		"react-native-orientation": "^3.1.0",
 		"react-native-root-toast": "^1.3.0",
 		"react-native-scrollable-tab-view": "^0.6.7",
+		"react-native-slider": "^0.11.0",
+		"react-native-spinkit": "^1.1.1",
 		"react-native-splash-screen": "^3.0.0",
-		"react-native-swiper": "^1.5.10"
+		"react-native-swiper": "^1.5.10",
+		"react-native-vector-icons": "^4.3.0",
+		"react-native-video": "^2.0.0",
+		"react-navigation": "^1.0.0-beta.11",
+		"react-timer-mixin": "^0.13.3"
 	},
 	"devDependencies": {
 		"babel-jest": "20.0.3",
