--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
 		"react-native-slider": "^0.11.0",
 		"react-native-spinkit": "^1.1.1",
 		"react-native-splash-screen": "^3.0.0",
+		"react-native-storage": "^0.2.2",
 		"react-native-swiper": "^1.5.10",
 		"react-native-vector-icons": "^4.3.0",
 		"react-native-video": "^2.0.0",
