--- a/ios/WolfVideo/Info.plist
+++ b/ios/WolfVideo/Info.plist
@@ -40,7 +40,9 @@
 	<key>NSCameraUsageDescription</key>
 	<string>使用相机以上传头像</string>
 	<key>NSLocationWhenInUseUsageDescription</key>
-	<string></string>
+	<string>使用位置</string>
+	<key>NSMicrophoneUsageDescription</key>
+	<string>使用麦克风</string>
 	<key>NSPhotoLibraryUsageDescription</key>
 	<string>使用相册以上传头像</string>
 	<key>UIAppFonts</key>
