--- a/ios/Podfile
+++ b/ios/Podfile
@@ -4,7 +4,8 @@ platform :ios, '9.0'
 target 'WolfVideo' do
   # use_frameworks!
     pod 'IQKeyboardManager'
-
+    pod 'RSKImageCropper'
+    pod 'QBImagePickerController'
   target 'WolfVideo-tvOSTests' do
     inherit! :search_paths
     # Pods for testing
