--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
 		"react-mixin": "^2.0.2",
 		"react-native": "0.47.2",
 		"react-native-device-info": "^0.11.0",
+		"react-native-image-crop-picker": "^0.16.1",
 		"react-native-image-picker": "^0.26.7",
 		"react-native-orientation": "^3.1.0",
 		"react-native-root-toast": "^1.3.0",
