更新个人信息 状态栏调整 图片缓存 检查登录

--- a/ios/Podfile
+++ b/ios/Podfile
@@ -6,6 +6,8 @@ target 'WolfVideo' do
     pod 'IQKeyboardManager'
     pod 'RSKImageCropper'
     pod 'QBImagePickerController'
+    pod 'react-native-fetch-blob',
+        :path => '../node_modules/react-native-fetch-blob'
   target 'WolfVideo-tvOSTests' do
     inherit! :search_paths
     # Pods for testing
