--- a/package.json
+++ b/package.json
@@ -12,14 +12,18 @@
 		"react-mixin": "^2.0.2",
 		"react-native": "0.47.2",
 		"react-native-device-info": "^0.11.0",
+		"react-native-fetch-blob": "^0.10.8",
 		"react-native-image-crop-picker": "^0.16.1",
 		"react-native-image-picker": "^0.26.7",
+		"react-native-image-progress": "^1.0.1",
+		"react-native-img-cache": "^1.4.0",
 		"react-native-orientation": "^3.1.0",
+		"react-native-progress": "^3.4.0",
 		"react-native-root-toast": "^1.3.0",
 		"react-native-scrollable-tab-view": "^0.6.7",
 		"react-native-slider": "^0.11.0",
 		"react-native-spinkit": "^1.1.1",
-		"react-native-splash-screen": "^3.0.0",
+		"react-native-splash-screen": "^3.0.1",
 		"react-native-storage": "^0.2.2",
 		"react-native-swiper": "^1.5.10",
 		"react-native-vector-icons": "^4.3.0",
