--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
 		"react-native": "0.47.2",
 		"react-native-device-info": "^0.11.0",
 		"react-native-fetch-blob": "^0.10.8",
+		"react-native-fs": "^2.5.1",
 		"react-native-image-crop-picker": "^0.16.1",
 		"react-native-image-picker": "^0.26.7",
 		"react-native-image-progress": "^1.0.1",
